fixed overflow issue with short view - fixed horizontal scrollbar with badly positioned stuff

--- a/stylus/elements/activities.styl
+++ b/stylus/elements/activities.styl
@@ -82,7 +82,6 @@
 			color: #666666
 	.short-list
 		clear: both
-		left: 2px
 		padding-bottom: 3px
 		position: relative
 	/* GITHUB and BITBUCKET SPECIFIC */
