--- a/stylus/framework/chat-themes.styl
+++ b/stylus/framework/chat-themes.styl
@@ -9,6 +9,11 @@ body.client-style-compact
 		.bg-overlay,
 		.org-info
 			height: 43px !important
+			display: block !important
+		.org-logo-name
+			display: block !important
+		.org-area-bg
+			overflow: hidden
 		.org-logo-name img
 			left: -30% !important
 			top: -8px !important
@@ -119,6 +124,7 @@ body.client-style-compact .client
 			padding: 0
 			line-height: inherit
 			@extend $normal-font-size
+			color: gainsboro-light !important
 			&:hover
 				.different-timezone
 					opacity: 1
